--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projet-react",
+  "name": "parking-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,24 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.8",
-    "google-map-react": "^2.2.5",
+    "chart.js": "^4.5.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-chartjs-2": "^5.3.1",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
-    "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "npm:rolldown-vite@7.2.2"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.2"
+    "vite": "^7.2.4"
   }
 }
